[package]
name = "helius-ws-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = { version = "0.20.1", features = ["native-tls"] }
futures-util = "0.3.29"
tokio = { version = "1.23.0", features = ["full"] }